--- a/index.html
+++ b/index.html
@@ -21,23 +21,24 @@
     <div class="wrapper">
       <header class="container">
         <!-- UPDATE THIS -->
-        <img src="assets/img/placeholder.jpg" class="profile" />
+        <img src="assets/img/placeholder.jpeg" class="profile" />
 
         <!-- UPDATE THIS -->
-        <h1>Your Name</h1>
+        <h1>Chris</h1>
       </header>
 
       <section class="container">
         <!-- UPDATE THIS -->
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-          et justo sed tellus auctor vehicula. Mauris molestie hendrerit
-          accumsan.
+          Hi my name is chris, I go by Club as my aleious on social media. I
+          have a strong passion for programming and I like working on small
+          projects and games on unity and other gaming engines.
         </p>
         <p>
-          Vivamus ligula enim, hendrerit vitae sodales id, molestie quis lorem.
-          Morbi viverra vel eros cursus iaculis. Morbi eleifend nisi sit amet
-          laoreet congue.
+          I also really enjoy 3D/2D modelling/Creating and animating. I have
+          done programming commisions before but recently I have been doing my
+          own things. If you are interested in a commissions you can just dm me
+          for info and I can show you my vouches of my previous work
         </p>
       </section>
 
