--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- UPDATE THIS -->
-    <title>Your Name Here: Splash Page</title>
+    <title>Club's contact info</title>
 
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -21,7 +21,7 @@
     <div class="wrapper">
       <header class="container">
         <!-- UPDATE THIS -->
-        <img src="assets/img/placeholder.jpeg" class="profile" />
+        <img src="assets/img/pfp.jpg" class="profile" />
 
         <!-- UPDATE THIS -->
         <h1>Chris</h1>
@@ -32,22 +32,22 @@
         <p>
           Hi my name is chris, I go by Club as my aleious on social media. I
           have a strong passion for programming and I like working on small
-          projects and games on unity and other gaming engines.
+          projects on unity/other gaming engines.
         </p>
         <p>
           I also really enjoy 3D/2D modelling/Creating and animating. I have
           done programming commisions before but recently I have been doing my
-          own things. If you are interested in a commissions you can just dm me
+          own thing. If you are interested in a commissions you can just dm me
           for info and I can show you my vouches of my previous work
         </p>
       </section>
 
       <footer class="container">
         <!-- UPDATE THIS -->
-        <a href=""><i class="fab fa-instagram"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
-        <a href=""><i class="fab fa-facebook-f"></i></a>
-        <a href=""><i class="fab fa-twitch"></i></a>
+
+        <a href="https://twitter.com/Bruhtowers"><i class="fab fa-twitter"></i></a>
+    
+        ></a>
       </footer>
     </div>
   </body>
