--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- UPDATE THIS -->
-    <title>Club's contact info</title>
+    <title>Club's contact infos</title>
 
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -45,8 +45,8 @@
       <footer class="container">
         <!-- UPDATE THIS -->
 
-        <a href="https://twitter.com/Bruhtowers"><i class="fab fa-twitter"></i></a>
-    
+        <a href="https://twitter.com/Bruhtowers"
+          ><i class="fab fa-twitter"></i
         ></a>
       </footer>
     </div>
